force-app/main/default/objects/Loan_Referral__c/Loan_Referral__c.object-meta.xml
<CustomObject>
    <description>Captured loan referral intake with optional link to an existing account match.</description>
    <label>Loan Referral</label>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>