force-app/main/default/objects/Loan_Referral__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account selected as the best match for this referral.</description>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Referrals</relationshipLabel>
    <relationshipName>Loan_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>