force-app/main/default/objects/Loan_Referral__c/fields/SSN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4__c</fullName>
    <description>Digits captured from intake (last four only).</description>
    <label>SSN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>